templates/manifests/mariadb.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: NAMESPACE
spec:
  replicas: 1
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.4.12-bionic
        volumeMounts:
        - name: mysql
          mountPath: "/var/lib/mysql"
        ports:
        - containerPort: 3306
          protocol: TCP
      securityContext:
        runAsUser: 1000
        runAsGroup: 65535
        fsGroup: 65535
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: NAMESPACE
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mariadb
